log
Fri Apr 17 03:17:53 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
e0f1ccb
Fri Apr 17 03:37:44 PM UTC 2026: 
 hashmap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
hashmap.c: In function ‘enlarge’:
hashmap.c:122:5: error: unknown type name ‘pair’; did you mean ‘Pair’?
  122 |     pair** old_buckets = map->buckets;
      |     ^~~~
      |     Pair
hashmap.c:122:26: error: initialization of ‘int **’ from incompatible pointer type ‘Pair **’ [-Wincompatible-pointer-types]
  122 |     pair** old_buckets = map->buckets;
      |                          ^~~
hashmap.c:125:49: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
  125 |     map->buckets = calloc(map->capacity, sizeof(pair*));
      |                                                 ^~~~
      |                                                 Pair
hashmap.c:125:49: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:125:54: error: expected expression before ‘)’ token
  125 |     map->buckets = calloc(map->capacity, sizeof(pair*));
      |                                                      ^
hashmap.c:128:38: error: request for member ‘key’ in something not a structure or union
  128 |         insertMap(map, old_buckets[i]->key, old_buckets[i]->value);
      |                                      ^~
hashmap.c:128:59: error: request for member ‘value’ in something not a structure or union
  128 |         insertMap(map, old_buckets[i]->key, old_buckets[i]->value);
      |                                                           ^~
cc1: all warnings being treated as errors
364e3f7
Fri Apr 17 03:38:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
hashmap.c: In function ‘enlarge’:
hashmap.c:122:5: error: unknown type name ‘pair’; did you mean ‘Pair’?
  122 |     pair** old_buckets = map->buckets;
      |     ^~~~
      |     Pair
hashmap.c:122:26: error: initialization of ‘int **’ from incompatible pointer type ‘Pair **’ [-Wincompatible-pointer-types]
  122 |     pair** old_buckets = map->buckets;
      |                          ^~~
hashmap.c:125:49: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
  125 |     map->buckets = calloc(map->capacity, sizeof(pair));
      |                                                 ^~~~
      |                                                 Pair
hashmap.c:125:49: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:128:38: error: request for member ‘key’ in something not a structure or union
  128 |         insertMap(map, old_buckets[i]->key, old_buckets[i]->value);
      |                                      ^~
hashmap.c:128:59: error: request for member ‘value’ in something not a structure or union
  128 |         insertMap(map, old_buckets[i]->key, old_buckets[i]->value);
      |                                                           ^~
cc1: all warnings being treated as errors
b100cb4
Fri Apr 17 03:39:16 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
cc1: all warnings being treated as errors
3a0d388
Fri Apr 17 03:41:02 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
hashmap.c:67:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   67 |     map->current = new;
      |                  ^
cc1: all warnings being treated as errors
41fb991
Fri Apr 17 03:41:27 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
hashmap.c:66:5: error: ‘new’ undeclared (first use in this function)
   66 |     new = createPair(key, value);
      |     ^~~
hashmap.c:66:5: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
295102f
Fri Apr 17 03:42:18 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
hashmap.c:67:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   67 |     map->current = new;
      |                  ^
cc1: all warnings being treated as errors
5d1b29b
Fri Apr 17 03:44:17 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
hashmap.c:68:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   68 |     map->current = new;
      |                  ^
cc1: all warnings being treated as errors
5af5779
Fri Apr 17 03:44:51 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos != NULL){
      |            ^~
cc1: all warnings being treated as errors
e251959
Fri Apr 17 03:45:55 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
761abdd
